Fixed dashboard cards alignments with flex

--- a/themes/grav/scss/template/_admin.scss
+++ b/themes/grav/scss/template/_admin.scss
@@ -728,21 +728,24 @@ body.sidebar-quickopen #admin-main {
     @include display(flex);
     @include flex-flow(row wrap);
 
-    .dashboard-item {
+    .dashboard-item-flex {
         @include display(flex);
         @include flex-flow(column nowrap);
 
-        width: 48%;
-        margin: 0 2%;
+        width: 50%;
 
-        &:nth-of-type(2n) {
+        &:nth-of-type(2n) .dashboard-item {
             margin-right: 0;
+            margin-left: 4%;
         }
 
-        &:nth-of-type(2n+1) {
+        &:nth-of-type(2n+1) .dashboard-item {
             margin-left: 0;
+            margin-right: 4%;
         }
+    }
 
+    .dashboard-item {
         @include breakpoint(mobile-only) {
             width: 100%;
         }
